Fix seg-faults in objdump when disassembling a corrupt versados binary.

PR binutils/21591
	* versados.c (versados_mkobject): Zero the allocated tdata structure.
	(process_otr): Check for an invalid offset in the otr structure.